--- a/essays/capital-is-a-stress-test.html
+++ b/essays/capital-is-a-stress-test.html
@@ -1,66 +1,120 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Capital Is a Stress Test, Not a Solution – BACKGRND</title>
-  <link rel="stylesheet" href="../styles.css">
-  <script src="../script.js"></script>
-</head>
-<body>
-  <div class="app">
-    <header class="header">
-      <div class="container">
-        <div class="header-inner">
-          <a href="../index.html" class="site-title">BACKGRND</a>
-          <nav class="nav">
-            <a href="../essays.html" class="nav-link nav-link-secondary">Essays</a>
-            <a href="../capital-diligence.html" class="nav-link">Capital</a>
-            <a href="../venture-studio.html" class="nav-link">Studio</a>
-            <a href="../principals.html" class="nav-link">Principals</a>
-            <a href="../access.html" class="nav-link">Access</a>
-          </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Capital Is a Stress Test, Not a Solution – BACKGRND</title>
+    <link rel="stylesheet" href="../styles.css" />
+    <script src="../script.js"></script>
+  </head>
+  <body>
+    <div class="app">
+      <header class="header">
+        <div class="container">
+          <div class="header-inner">
+            <a href="../index.html" class="site-title">BACKGRND</a>
+            <button
+              class="nav-toggle"
+              aria-expanded="false"
+              aria-controls="site-navigation"
+              aria-label="Toggle navigation"
+            >
+              <span class="visually-hidden">Menu</span>
+              <svg
+                class="hamburger"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                aria-hidden="true"
+                focusable="false"
+              >
+                <rect
+                  class="bar top"
+                  x="4"
+                  y="6"
+                  width="16"
+                  height="2"
+                  rx="1"
+                ></rect>
+                <rect
+                  class="bar middle"
+                  x="4"
+                  y="11"
+                  width="16"
+                  height="2"
+                  rx="1"
+                ></rect>
+                <rect
+                  class="bar bottom"
+                  x="4"
+                  y="16"
+                  width="16"
+                  height="2"
+                  rx="1"
+                ></rect>
+              </svg>
+            </button>
+            <nav id="site-navigation" class="nav" data-open="false">
+              <a href="../essays.html" class="nav-link nav-link-secondary"
+                >Essays</a
+              >
+              <a href="../capital-diligence.html" class="nav-link">Capital</a>
+              <a href="../venture-studio.html" class="nav-link">Studio</a>
+              <a href="../principals.html" class="nav-link">Principals</a>
+              <a href="../access.html" class="nav-link">Access</a>
+            </nav>
+          </div>
         </div>
-      </div>
-    </header>
+      </header>
 
-    <main class="main">
-      <div class="container">
-        <article class="essay-article">
-          <a href="../essays.html" class="back-link">← Essays</a>
+      <main class="main">
+        <div class="container">
+          <article class="essay-article">
+            <a href="../essays.html" class="back-link">← Essays</a>
 
-          <header class="essay-article-header">
-            <h1 class="essay-article-title">Capital Is a Stress Test, Not a Solution</h1>
-          </header>
+            <header class="essay-article-header">
+              <h1 class="essay-article-title">
+                Capital Is a Stress Test, Not a Solution
+              </h1>
+            </header>
 
-          <div class="essay-article-body">
-            <p>Capital is often framed as a solution—to growth, to competition, to execution challenges. In reality, capital is a stress test. It reveals whether discipline, clarity, and structure already exist.</p>
+            <div class="essay-article-body">
+              <p>
+                Capital is often framed as a solution—to growth, to competition,
+                to execution challenges. In reality, capital is a stress test.
+                It reveals whether discipline, clarity, and structure already
+                exist.
+              </p>
 
-            <p>Capital magnifies structure.</p>
-          </div>
+              <p>Capital magnifies structure.</p>
+            </div>
 
-          <div class="essay-gating">
-            <p class="gating-message">Full access to this essay is intentionally limited.</p>
-            <a href="../access.html" class="gating-link">Request Access</a>
-          </div>
-        </article>
-      </div>
-    </main>
-
-    <footer class="footer">
-      <div class="container">
-        <div class="footer-content">
-          <div class="footer-left">
-            <p class="footer-title">BACKGRND</p>
-            <p class="footer-text">
-              We operate quietly.<br>
-              Outcomes tend to speak later.
-            </p>
-          </div>
-          <button onclick="toggleTheme()" class="theme-toggle">Light / Dark</button>
+            <div class="essay-gating">
+              <p class="gating-message">
+                Full access to this essay is intentionally limited.
+              </p>
+              <a href="../access.html" class="gating-link">Request Access</a>
+            </div>
+          </article>
         </div>
-      </div>
-    </footer>
-  </div>
-</body>
+      </main>
+
+      <footer class="footer">
+        <div class="container">
+          <div class="footer-content">
+            <div class="footer-left">
+              <p class="footer-title">BACKGRND</p>
+              <p class="footer-text">
+                We operate quietly.<br />
+                Outcomes tend to speak later.
+              </p>
+            </div>
+            <button onclick="toggleTheme()" class="theme-toggle">
+              Light / Dark
+            </button>
+          </div>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
