--- a/essays/most-failures-are-structural.html
+++ b/essays/most-failures-are-structural.html
@@ -1,77 +1,156 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Most Failures Are Structural – BACKGRND</title>
-  <link rel="stylesheet" href="../styles.css">
-  <script src="../script.js"></script>
-</head>
-<body>
-  <div class="app">
-    <header class="header">
-      <div class="container">
-        <div class="header-inner">
-          <a href="../index.html" class="site-title">BACKGRND</a>
-          <nav class="nav">
-            <a href="../essays.html" class="nav-link nav-link-secondary">Essays</a>
-            <a href="../capital-diligence.html" class="nav-link">Capital</a>
-            <a href="../venture-studio.html" class="nav-link">Studio</a>
-            <a href="../principals.html" class="nav-link">Principals</a>
-            <a href="../access.html" class="nav-link">Access</a>
-          </nav>
-        </div>
-      </div>
-    </header>
-
-    <main class="main">
-      <div class="container">
-        <article class="essay-article">
-          <a href="../essays.html" class="back-link">← Essays</a>
-
-          <header class="essay-article-header">
-            <h1 class="essay-article-title">Most Failures Are Structural</h1>
-          </header>
-
-          <div class="essay-article-body">
-            <p>Most businesses do not fail because of a lack of effort, intelligence, or intent.<br>They fail because they were designed to behave poorly once time, capital, or complexity entered the system.</p>
-
-            <p>Early decisions—often made under pressure, optimism, or incomplete information—quietly determine where power sits, how value accumulates, and which problems become permanent later. These decisions are rarely revisited, not because they are correct, but because they become embedded.</p>
-
-            <p>Structure precedes performance.</p>
-
-            <p>Execution does not compensate for weak structure. It merely exposes it faster. What appears to be a problem of leadership, culture, or strategy is often a consequence of architectural choices made long before those symptoms surfaced.</p>
-
-            <p>Many businesses look functional in their early years. Revenue grows. Teams expand. Activity increases. Yet beneath the surface, value may be accumulating elsewhere—upstream suppliers, downstream platforms, or intermediaries with stronger control positions. Over time, the business works harder for diminishing returns, mistaking motion for progress.</p>
-
-            <p>Structural failure is delayed failure.</p>
-
-            <p>By the time distress becomes visible, the causes are already locked in: incentive misalignment, fragile margins, decision bottlenecks, capital dependency, or control structures that cannot absorb stress. At that point, correction becomes expensive, political, or impossible.</p>
-
-            <p>This is why BACKGRND works upstream.</p>
-
-            <p>The goal is not to optimise performance, but to understand how a business is designed to behave under pressure—before pressure arrives. Structure does not guarantee success, but weak structure guarantees constraint.</p>
-
-            <p>Most failures are not sudden.<br>They are architectural.</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Most Failures Are Structural – BACKGRND</title>
+    <link rel="stylesheet" href="../styles.css" />
+    <script src="../script.js"></script>
+  </head>
+  <body>
+    <div class="app">
+      <header class="header">
+        <div class="container">
+          <div class="header-inner">
+            <a href="../index.html" class="site-title">BACKGRND</a>
+            <button
+              class="nav-toggle"
+              aria-expanded="false"
+              aria-controls="site-navigation"
+              aria-label="Toggle navigation"
+            >
+              <span class="visually-hidden">Menu</span>
+              <svg
+                class="hamburger"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                aria-hidden="true"
+                focusable="false"
+              >
+                <rect
+                  class="bar top"
+                  x="4"
+                  y="6"
+                  width="16"
+                  height="2"
+                  rx="1"
+                ></rect>
+                <rect
+                  class="bar middle"
+                  x="4"
+                  y="11"
+                  width="16"
+                  height="2"
+                  rx="1"
+                ></rect>
+                <rect
+                  class="bar bottom"
+                  x="4"
+                  y="16"
+                  width="16"
+                  height="2"
+                  rx="1"
+                ></rect>
+              </svg>
+            </button>
+            <nav id="site-navigation" class="nav" data-open="false">
+              <a href="../essays.html" class="nav-link nav-link-secondary"
+                >Essays</a
+              >
+              <a href="../capital-diligence.html" class="nav-link">Capital</a>
+              <a href="../venture-studio.html" class="nav-link">Studio</a>
+              <a href="../principals.html" class="nav-link">Principals</a>
+              <a href="../access.html" class="nav-link">Access</a>
+            </nav>
           </div>
-        </article>
-      </div>
-    </main>
-
-    <footer class="footer">
-      <div class="container">
-        <div class="footer-content">
-          <div class="footer-left">
-            <p class="footer-title">BACKGRND</p>
-            <p class="footer-text">
-              We operate quietly.<br>
-              Outcomes tend to speak later.
-            </p>
-          </div>
-          <button onclick="toggleTheme()" class="theme-toggle">Light / Dark</button>
         </div>
-      </div>
-    </footer>
-  </div>
-</body>
+      </header>
+
+      <main class="main">
+        <div class="container">
+          <article class="essay-article">
+            <a href="../essays.html" class="back-link">← Essays</a>
+
+            <header class="essay-article-header">
+              <h1 class="essay-article-title">Most Failures Are Structural</h1>
+            </header>
+
+            <div class="essay-article-body">
+              <p>
+                Most businesses do not fail because of a lack of effort,
+                intelligence, or intent.<br />They fail because they were
+                designed to behave poorly once time, capital, or complexity
+                entered the system.
+              </p>
+
+              <p>
+                Early decisions—often made under pressure, optimism, or
+                incomplete information—quietly determine where power sits, how
+                value accumulates, and which problems become permanent later.
+                These decisions are rarely revisited, not because they are
+                correct, but because they become embedded.
+              </p>
+
+              <p>Structure precedes performance.</p>
+
+              <p>
+                Execution does not compensate for weak structure. It merely
+                exposes it faster. What appears to be a problem of leadership,
+                culture, or strategy is often a consequence of architectural
+                choices made long before those symptoms surfaced.
+              </p>
+
+              <p>
+                Many businesses look functional in their early years. Revenue
+                grows. Teams expand. Activity increases. Yet beneath the
+                surface, value may be accumulating elsewhere—upstream suppliers,
+                downstream platforms, or intermediaries with stronger control
+                positions. Over time, the business works harder for diminishing
+                returns, mistaking motion for progress.
+              </p>
+
+              <p>Structural failure is delayed failure.</p>
+
+              <p>
+                By the time distress becomes visible, the causes are already
+                locked in: incentive misalignment, fragile margins, decision
+                bottlenecks, capital dependency, or control structures that
+                cannot absorb stress. At that point, correction becomes
+                expensive, political, or impossible.
+              </p>
+
+              <p>This is why BACKGRND works upstream.</p>
+
+              <p>
+                The goal is not to optimise performance, but to understand how a
+                business is designed to behave under pressure—before pressure
+                arrives. Structure does not guarantee success, but weak
+                structure guarantees constraint.
+              </p>
+
+              <p>Most failures are not sudden.<br />They are architectural.</p>
+            </div>
+          </article>
+        </div>
+      </main>
+
+      <footer class="footer">
+        <div class="container">
+          <div class="footer-content">
+            <div class="footer-left">
+              <p class="footer-title">BACKGRND</p>
+              <p class="footer-text">
+                We operate quietly.<br />
+                Outcomes tend to speak later.
+              </p>
+            </div>
+            <button onclick="toggleTheme()" class="theme-toggle">
+              Light / Dark
+            </button>
+          </div>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
