--- a/essays/on-simplicity.html
+++ b/essays/on-simplicity.html
@@ -1,69 +1,145 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>On Simplicity – BACKGRND</title>
-  <link rel="stylesheet" href="../styles.css">
-  <script src="../script.js"></script>
-</head>
-<body>
-  <div class="app">
-    <header class="header">
-      <div class="container">
-        <div class="header-inner">
-          <a href="../index.html" class="site-title">BACKGRND</a>
-          <nav class="nav">
-            <a href="../essays.html" class="nav-link nav-link-secondary">Essays</a>
-            <a href="../capital-diligence.html" class="nav-link">Capital</a>
-            <a href="../venture-studio.html" class="nav-link">Studio</a>
-            <a href="../principals.html" class="nav-link">Principals</a>
-            <a href="../access.html" class="nav-link">Access</a>
-          </nav>
-        </div>
-      </div>
-    </header>
-
-    <main class="main">
-      <div class="container">
-        <article class="essay-article">
-          <a href="../essays.html" class="back-link">← Essays</a>
-
-          <header class="essay-article-header">
-            <h1 class="essay-article-title">On Simplicity</h1>
-          </header>
-
-          <div class="essay-article-body">
-            <p>Complex systems tend to produce simple-sounding explanations and simple systems tend to produce complex-sounding ones. This asymmetry is worth noting.</p>
-
-            <p>When a situation is genuinely complex—many interacting variables, feedback loops, emergent properties—participants often retreat to simple narratives. The market fell because of inflation fears. This is not wrong, exactly, but it is radically incomplete. The simplicity of the explanation belies the complexity of the underlying system.</p>
-
-            <p>Conversely, when a situation is relatively simple—a company with one product, one customer, one risk—participants often produce elaborate analyses. The simplicity of the underlying system is obscured by the complexity of the explanation.</p>
-
-            <p>We try to match the complexity of our analysis to the complexity of the subject. This is harder than it sounds. The temptation to oversimplify the complex and overcomplicate the simple runs deep.</p>
-
-            <p>In practice, this means we are often uncertain where others are confident, and confident where others are uncertain. Complex situations warrant humility; simple situations warrant conviction. Most investors do the opposite.</p>
-
-            <p>Our portfolio reflects this view. We hold concentrated positions in situations we regard as relatively simple, and smaller positions—or no position at all—in situations we regard as genuinely complex. This is not a formula, but a disposition.</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>On Simplicity – BACKGRND</title>
+    <link rel="stylesheet" href="../styles.css" />
+    <script src="../script.js"></script>
+  </head>
+  <body>
+    <div class="app">
+      <header class="header">
+        <div class="container">
+          <div class="header-inner">
+            <a href="../index.html" class="site-title">BACKGRND</a>
+            <button
+              class="nav-toggle"
+              aria-expanded="false"
+              aria-controls="site-navigation"
+              aria-label="Toggle navigation"
+            >
+              <span class="visually-hidden">Menu</span>
+              <svg
+                class="hamburger"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                aria-hidden="true"
+                focusable="false"
+              >
+                <rect
+                  class="bar top"
+                  x="4"
+                  y="6"
+                  width="16"
+                  height="2"
+                  rx="1"
+                ></rect>
+                <rect
+                  class="bar middle"
+                  x="4"
+                  y="11"
+                  width="16"
+                  height="2"
+                  rx="1"
+                ></rect>
+                <rect
+                  class="bar bottom"
+                  x="4"
+                  y="16"
+                  width="16"
+                  height="2"
+                  rx="1"
+                ></rect>
+              </svg>
+            </button>
+            <nav id="site-navigation" class="nav" data-open="false">
+              <a href="../essays.html" class="nav-link nav-link-secondary"
+                >Essays</a
+              >
+              <a href="../capital-diligence.html" class="nav-link">Capital</a>
+              <a href="../venture-studio.html" class="nav-link">Studio</a>
+              <a href="../principals.html" class="nav-link">Principals</a>
+              <a href="../access.html" class="nav-link">Access</a>
+            </nav>
           </div>
-        </article>
-      </div>
-    </main>
-
-    <footer class="footer">
-      <div class="container">
-        <div class="footer-content">
-          <div class="footer-left">
-            <p class="footer-title">BACKGRND</p>
-            <p class="footer-text">
-              We operate quietly.<br>
-              Outcomes tend to speak later.
-            </p>
-          </div>
-          <button onclick="toggleTheme()" class="theme-toggle">Light / Dark</button>
         </div>
-      </div>
-    </footer>
-  </div>
-</body>
+      </header>
+
+      <main class="main">
+        <div class="container">
+          <article class="essay-article">
+            <a href="../essays.html" class="back-link">← Essays</a>
+
+            <header class="essay-article-header">
+              <h1 class="essay-article-title">On Simplicity</h1>
+            </header>
+
+            <div class="essay-article-body">
+              <p>
+                Complex systems tend to produce simple-sounding explanations and
+                simple systems tend to produce complex-sounding ones. This
+                asymmetry is worth noting.
+              </p>
+
+              <p>
+                When a situation is genuinely complex—many interacting
+                variables, feedback loops, emergent properties—participants
+                often retreat to simple narratives. The market fell because of
+                inflation fears. This is not wrong, exactly, but it is radically
+                incomplete. The simplicity of the explanation belies the
+                complexity of the underlying system.
+              </p>
+
+              <p>
+                Conversely, when a situation is relatively simple—a company with
+                one product, one customer, one risk—participants often produce
+                elaborate analyses. The simplicity of the underlying system is
+                obscured by the complexity of the explanation.
+              </p>
+
+              <p>
+                We try to match the complexity of our analysis to the complexity
+                of the subject. This is harder than it sounds. The temptation to
+                oversimplify the complex and overcomplicate the simple runs
+                deep.
+              </p>
+
+              <p>
+                In practice, this means we are often uncertain where others are
+                confident, and confident where others are uncertain. Complex
+                situations warrant humility; simple situations warrant
+                conviction. Most investors do the opposite.
+              </p>
+
+              <p>
+                Our portfolio reflects this view. We hold concentrated positions
+                in situations we regard as relatively simple, and smaller
+                positions—or no position at all—in situations we regard as
+                genuinely complex. This is not a formula, but a disposition.
+              </p>
+            </div>
+          </article>
+        </div>
+      </main>
+
+      <footer class="footer">
+        <div class="container">
+          <div class="footer-content">
+            <div class="footer-left">
+              <p class="footer-title">BACKGRND</p>
+              <p class="footer-text">
+                We operate quietly.<br />
+                Outcomes tend to speak later.
+              </p>
+            </div>
+            <button onclick="toggleTheme()" class="theme-toggle">
+              Light / Dark
+            </button>
+          </div>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
